argo/app/booking-api.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: booking-api
  namespace: booking
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: booking-api
  strategy:
    canary:
      steps:
        - setWeight: 25
        - pause: {duration: 30s}
        - setWeight: 50
        - pause: {duration: 30s}
        - setWeight: 100
  template:
    metadata:
      labels:
        app: booking-api
    spec:
      automountServiceAccountToken: false
      hostNetwork: false
      hostPID: false
      hostIPC: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 16Mi
      containers:
        - name: booking-api
          image: 637423617446.dkr.ecr.us-east-2.amazonaws.com/bla-demo-booking-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            privileged: false
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
          readinessProbe:
            httpGet:
              path: /health
              port: http
          livenessProbe:
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: booking-api
  namespace: booking
spec:
  selector:
    app: booking-api
  ports:
    - name: http
      port: 80
      targetPort: http
